notes input height fix on mobile

--- a/client/src/components/home/Home.css
+++ b/client/src/components/home/Home.css
@@ -159,6 +159,7 @@ section {
 
   .notes-input {
     font-size: 16px;
+    min-height: 10rem;
   }
 
   .week-title {
